--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "firebase": "^9.12.1",
     "firebase-tools": "^11.14.4",
-    "fsevents": "^2.3.2",
     "npm-check-updates": "^16.3.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -33,6 +32,9 @@
     "typescript": "^4.8.4",
     "uuid": "^9.0.0",
     "web-vitals": "^3.0.3"
+  },
+  "optionalDependencies": {
+    "fsevents": "~2.3.2"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
